<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ceshi">测试</string>
    <string name="app_name">易播</string>
    <string name="all_courses">全部课程</string>
    <string name="live_courses">在线直播</string>
    <string name="me">我</string>
    <string name="main_title">易播</string>
    <string name="leixing">类型</string>
    <string name="laiyuan">来源</string>
    <string name="xiangqing">详情</string>
    <string name="yuwen">语文</string>
    <string name="shuxue">数学</string>
	<string name="wuli">物理</string>
	<string name="huaxue">化学</string>
	<string name="dili">地理</string>
	<string name="lishi">历史</string>
	<string name="lishijilu">历史记录</string>
	<string name="anzuixin">按最新</string>
	<string name="anredu">按热度</string>
	<string name="anpingfen">按评分</string>
	<string name="jianjie">简介</string>
	<string name="mulu">目录</string>
	<string name="pinglun">讨论</string>
	<string name="tiwen">提问</string>
	<string name="taoln">讨论</string>
	<string name="weidenglu">尚未登录</string>
	<string name="lijidenglu">立即登录</string>
	<string name="wodeshoucang">我的收藏</string>
	<string name="wodexiazai">我的下载</string>
	<string name="bofangjilu">播放记录</string>
	<string name="shezhi">设置</string>
	<string name="meiyouzhanghao">没有账号？</string>
	<string name="lijizhuce">立即注册</string>
	<string name="nianji">年级</string>
	<string name="shijian">时间</string>
	<string name="biaoti">标题</string>
	<string name="kemu">科目</string>
	<string name="zuozhe">作者</string>
	<string name="fenlei">分类</string>
	<string name="denglu">账号登录</string>
	<string name="kuaijiedenglu">快捷登录方式:</string>
	<string name="weixindenglu">微信登录</string>
	<string name="yanzheng">验证</string>
	<string name="yanzhengma">验证码</string>
	<string name="dadianhua">点击验证，您回收到来电，记下验证码！</string>
	<string name="huoquyanzhengma">获取验证码</string>
	<string name="yanzhenghuoquzhong">验证码获取中</string>
	<string name="queren">确认</string>
	<string name="shoujihao">手机号</string>
	<string name="qingshurushoujihao">请输入手机号</string>
	<string name="qingshuruyanzheng">请输入验证码</string>
	<string name="miaohoukehuoqu">秒后可重新获取验证码</string>
	<string name="zhuce">注册</string>
	<string name="qiehuanzhanghao">切换账号</string>
	<string name="tuichudenglu">退出登录</string>
	<string name="fanhui">返回</string>
	<string name="fenxiang">分享</string>
	<string name="xiazai">下载</string>
	<string name="sousuo">搜索</string>
	<string name="zidongtuisong">自动推送</string>
	<string name="yunxukangprs">允许在2G/3G/4G下观看</string>
	<string name="yunxuxiazaigprs">允许在2G/3G/4G下载</string>
	<string name="xiazaiguanli">下载管理</string>
	<string name="xuanzexiazai">选择下载使用的SD卡</string>
	<string name="qingchuhuancun">清楚缓存</string>
	<string name="yijianfankui">意见反馈</string>
	<string name="guanyu">关于</string>
	<string name="yingyongtuijian">应用推荐</string>
	<string name="querenbofang2g">确定要在2G/3G/4G网络下播放视频吗？</string>
	<string name="querenxiazai2g">确定要使用2G/3G/4G网络下载视频吗？</string>
	<string name="kaishi">开始</string>
	<string name="jieshu">结束</string>
	<string name="guanbi">关闭</string>
	<string name="yixuanze">已选中</string>
	<string name="wenjian">文件</string>
	<string name="quxiao">取消</string>
	<string name="dangqianweilianjie">当前未连接任何网络！</string>
	<string name="shipinbofangcuowu">视频播放错误！</string>
	<string name="shipinbofangwanbi">视频播放完毕！</string>
	<string name="daoshezhizhongdakai">是否到“系统设置”中打开网络连接？</string>
	<string name="xiazaizhong">正在下载...</string>
	<string name="xiazaiwan">下载完成</string>
	<string name="zanting">暂停</string>
	<string name="dengdai">等待</string>
	<string name="dengdaizhong">等待中...</string>
	<string name="quanbuzanting">全部暂停</string>
	<string name="quanbukaishi">全部开始</string>
	<string name="wokanguode">我看过的视频:</string>
	<string name="tedeboxlive">TED-ebox live</string>
	<string name="zuijiandan">最简单的学习直播</string>
	<string name="www">www.ebox-live.com</string>
	<string name="tianjiasuccess">添加成功！</string>
	<string name="yijingtianjia">已经添加！</string>
	<string name="riqi">"日期"</string>
	    
	<string name="header_hint_refresh_normal">下拉刷新</string>
    <string name="header_hint_refresh_ready">释放刷新</string>
    <string name="header_hint_refresh_loading">刷新&#8230;</string>
    <string name="header_hint_refresh_time">时间：</string>
    <string name="header_hint_refresh_load">加载中</string>
    <string name="footer_hint_load_normal">加载更多</string>
    <string name="footer_hint_load_ready">释放加载更多</string>
</resources>
