<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tab_font_size"
            android:text="@string/shoujihao" />

        <EditText
            android:id="@+id/phoneText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:inputType="phone"
            android:textSize="@dimen/tab_font_size"
            android:hint="@string/qingshurushoujihao"
            android:background="@drawable/login_input"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"  
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/yanzhengText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tab_font_size"
            android:text="@string/yanzhengma" />

        <EditText
            android:id="@+id/verifyText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/login_input"
            android:inputType="number"
            android:textSize="@dimen/tab_font_size"
            android:hint="@string/qingshuruyanzheng"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:gravity="right" >

        <Button
            android:id="@+id/verifyBtn"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:gravity="center_vertical|right"
            android:text="@string/huoquyanzhengma"
            android:background="@color/transparent"
            android:textColor="@drawable/get_verify_btn"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/login_button"
        android:text="@string/denglu"
        android:textColor="#a0ffffff"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lightgray"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/kuaijiedenglu" />

    <Button
        android:id="@+id/weixinLogin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/wx_login_btn"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textColor="@color/lightgray"
        android:gravity="center_horizontal"
        android:text="@string/weixindenglu" />

</LinearLayout>