<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailIntro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titileText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:text="@string/biaoti"
        android:textSize="@dimen/big_font_size1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/fenlieText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/fenlei"
            android:textColor="@color/lightgray" />

        <TextView
            android:id="@+id/zuozheText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:text="@string/zuozhe"
            android:textColor="@color/lightgray" />
    </LinearLayout>

    <TextView
        android:id="@+id/shijianText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="6dp"
        android:text="@string/shijian"
        android:textColor="@color/lightgray" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="1dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:src="@drawable/lightgray" />

    <TextView
        android:id="@+id/jianjieText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/jianjie"
        android:textColor="@color/lightgray" />

</LinearLayout>