<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:padding="12dp" >

        <com.eboxlive.ebox.view.CircleImageView
            android:id="@+id/loginHeadImage"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
			app:border_width="1dp"
			app:border_color="@color/lightgray2"
            android:src="@drawable/head_photo" />

        <TextView
            android:id="@+id/loginHeadText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:layout_toRightOf="@+id/loginHeadImage"
            android:text="@string/weidenglu"
            android:textSize="18sp" />

        <Button
            android:id="@+id/loginHeadBtn"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/me_login_button"
            android:text="@string/lijidenglu"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray2" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray3" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/xiazaiLayout"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@drawable/me_list_item"
        android:clickable="true"
        android:gravity="left|center_vertical"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ico_my_download" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/wodexiazai"
            android:textSize="@dimen/courses_category_fontsize" />

        <TextView
            android:id="@+id/downloadCountText"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/circle_bg"
            android:gravity="center"
            android:textSize="@dimen/small_font_size2"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray3" >
    </LinearLayout>
    <LinearLayout
        android:id="@+id/jiluLayout"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@drawable/me_list_item"
        android:clickable="true"  
        android:gravity="left|center_vertical"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ico_my_history" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/courses_category_fontsize"
            android:text="@string/bofangjilu" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray3" >
    </LinearLayout>
    <LinearLayout
        android:id="@+id/shezhiLayout"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@drawable/me_list_item"
        android:clickable="true"  
        android:gravity="left|center_vertical"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ico_my_setting" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/courses_category_fontsize"
            android:text="@string/shezhi" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray3" >
    </LinearLayout>

</LinearLayout>